# tcl-tomcrypt

./: .gitignore  .gitmodules  Makefile.in  README.md  aclocal.m4  configure.ac  meson.build  meson.options  suppressions  tomcrypt.pc.in
.github/workflows/: makefile.yml  release.yml
bench/: base64url.bench  cipher.bench  ecc.bench  hash.bench  hmac.bench  prng.bench
build_template/libtomcrypt/: Makefile
build_template/tomsfastmath/: Makefile
claude/skills/using-tomcrypt/: SKILL.md
doc/: meson.build  styles.css  tomcrypt.html  tomcrypt.md  tomcrypt.md.in  tomcrypt.n
generic/: aead.c  cipher.c  meson.build  pem.re  prng_class.c  tomcrypt.c  tomcryptInt.h  type_cipher_spec.c  type_ecc_curve.c  type_ecc_key.c  type_rsa_key.c
interned_deps/: meson.build
subprojects/: re2c.wrap
subprojects/packagefiles/re2c/: meson.build
tests/: aead.test  all.tcl  base64.test  cipher.test  common.tcl  ecc.test  ecc_curve.test  examples.test  hash.test  hkdf.test  hmac.test  pem.test  prng.test  rsa.test  testmode.test
tools/: dist_fixup.sh  interned_deps.json
