pandoc = find_program('pandoc', native: true, required: false)

if pandoc.found()
  doc_md = configure_file(
    input:          'tomcrypt.md.in',
    output:         '@BASENAME@',
    configuration:  teaconf,
  )

  doc_targets = []

  # Install the manpage under Tcl's prefix (so `man n tomcrypt` finds it
  # alongside Tcl's own manpages) when Tcl was located via pkg-config.  When
  # Tcl came from the wrap subproject fallback (CI "meson fallback" job, or
  # cross builds), the resulting InternalDependency has no `prefix` variable,
  # so fall back to the user's configured prefix.
  doc_install_prefix = tcl_dep.get_variable('prefix',
    default_value: get_option('prefix'),
  )

  doc_targets += custom_target('manpage',
    input:    doc_md,
    output:   meson.project_name() + '.n',
    command:  [pandoc, '--standalone', '--from', 'markdown', '--to', 'man',
      '@INPUT@', '--output', '@OUTPUT@'],
    install:          true,
    install_dir:      doc_install_prefix / 'share' / 'man' / 'mann',
    build_by_default: true,
  )

  doc_targets += custom_target('readme',
    input:    doc_md,
    output:   'README.md',
    command:  [pandoc, '--from', 'markdown', '--to', 'gfm',
      '@INPUT@', '--output', '@OUTPUT@'],
    install_dir:      meson.project_source_root(),
    install_tag:      'source',
    build_by_default: false,
  )

  alias_target('doc', doc_targets)
endif
